fix logo cropped in mobile

--- a/style.css
+++ b/style.css
@@ -11,4 +11,9 @@ body{
 
 div{
   height:140px;
+  overflow: visible;
+}
+
+svg {
+  overflow: visible;
 }
